--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <section class="map">
 
       <!-- Блок для вставки карты -->
-      <div class="map__canvas" id="map-canvas"></div>
+      <div class="map__canvas" id="map-canvas">
+      </div>
 
       <!-- Фильтрация объявлений -->
       <div class="map__filters-container">
