--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кексобукинг</title>
 </head>
-<>
+<body>
 
   <main>
     <div class="promo">
