--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кексобукинг</title>
 </head>
-<body>
+<body class="body">
 
   <main>
     <div class="promo">
@@ -94,7 +94,7 @@
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес (координаты)</label>
-          <input id="address" name="address" type="text"
+          <input id="address" name="address" type="text" value="35.68940, 139.69200"
            readonly>
         </fieldset>
         <fieldset class="ad-form__element">
